<resources>
    <string name="app_name">Registration Form</string>

    <string name="title_welcome">Data Validation</string>
    <string name="desc_welcome">Enter your personal information for more reliable validation</string>
    <string name="label_register">Register</string>
    <string name="label_next">Next</string>
    <string name="label_submit">Submit</string>

    <string name="title_personal_data">Personal Data</string>
    <string name="label_national_id">National ID</string>
    <string name="hint_national_id">Enter your National ID</string>
    <string name="msg_error_min_char_national_id">National ID must consist of 16 digits</string>
    <string name="label_fullname">Fullname</string>
    <string name="hint_fullname">Enter your Fullname</string>
    <string name="label_bank_account">Bank Account</string>
    <string name="hint_bank_account">Enter your Bank Account</string>
    <string name="label_education">Education</string>
    <string name="hint_education">Select your Last Education</string>
    <string name="label_date_of_birth">Date of birth</string>
    <string name="hint_date_of_birth">Select your date of birth</string>

    <string name="title_residential">Residence</string>
    <string name="label_domicile_address">Domicile Address</string>
    <string name="hint_domicile_address">Enter your Domicile Address</string>
    <string name="label_housing_type">Housing Type</string>
    <string name="hint_housing_type">Select your Housing Type</string>
    <string name="label_housing_number">No</string>
    <string name="hint_housing_number">Enter your Housing Number</string>
    <string name="label_province">Province</string>
    <string name="hint_province">Enter your Province</string>

    <string name="icon_back">icon back</string>
    <string name="title_review">Review Data</string>

    <string name="title_registration_successful">Registration Successful</string>
    <string name="desc_data_saved">Your data has been saved</string>
    <string name="label_okay">Okay</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="desc_confirmation">Are you want to confirm?</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_cancel">Cancel</string>
    <string name="title_discard_changes">Discard changes</string>
    <string name="desc_discard_changes">You have made changes. Do you want to discard them?</string>
    <string name="label_discard">Discard</string>
</resources>