<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.afisdev.registrationform.feature.residentialdata.ResidentialDataFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen_20"
        android:paddingVertical="@dimen/dimen_32"
        tools:context=".feature.residential.ResindetialDataFragment">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/icon_back"
            android:onClick="@{()->fragment.onBackEvent()}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_residential"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/title_residential"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_residential">
            <com.afisdev.common.customview.CustomInput
                android:id="@+id/ci_domicilie_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintInput="@string/hint_domicile_address"
                app:maximumInput="100"
                app:titleInput="@string/label_domicile_address"
                app:typeInput="text" />
            <com.afisdev.common.customview.CustomInput
                android:id="@+id/ci_housing_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintInput="@string/hint_housing_type"
                app:titleInput="@string/label_housing_type"
                app:typeInput="dropdown" />
            <com.afisdev.common.customview.CustomInput
                android:id="@+id/ci_housing_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintInput="@string/hint_housing_number"
                app:titleInput="@string/label_housing_number"
                app:typeInput="alphanumeric" />
            <com.afisdev.common.customview.CustomInput
                android:id="@+id/ci_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintInput="@string/hint_province"
                app:titleInput="@string/label_province"
                app:typeInput="dropdown" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            style="@style/style_DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/dimen_24"
            android:text="@string/label_next"
            android:onClick="@{()->fragment.nextPage()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>