<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.afisdev.registrationform.feature.registrationsuccess.RegistrationSuccessFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.registrationsuccess.RegistrationSuccessFragment">

        <ImageView
            android:id="@+id/iv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_success"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.335"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_success"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/title_registration_successful"
            android:textSize="@dimen/text_dimen_28"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_success" />

        <TextView
            android:id="@+id/tv_desc_successs"
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:gravity="center"
            android:text="@string/desc_data_saved"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_success" />

        <Button
            android:id="@+id/btn_okay"
            style="@style/style_DefaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_32"
            android:layout_marginVertical="@dimen/dimen_24"
            android:text="@string/label_okay"
            android:onClick="@{()->fragment.backToWelcome()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_successs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
